Fix Context toolview steals focus

We should only handle Esc if the toolview is visible

BUG: 510684